[package]
name = "unknownrori-simple-thread-pool"
version = "0.1.0"
edition = "2021"
description = "A very simple thread pool for networking and other stuff"
license = "MIT"
repository = "https://github.com/UnknownRori/rs-simple-thread-pool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = { version = "0.5", optional = true}

[features]
default = ["crossbeam"]
crossbeam = ["dep:crossbeam-channel"]
mpsc = []
